# AgentR

./: .env.dev  .env.dev.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  agentr.py  cli_example.py  pyproject.toml  setup.py  test_client.py
agentr/: __init__.py  agent.py  client.py  config.py  exceptions.py  graph_utils.py  nodes.py  prompts.py  states.py  tools.py
app/: app.py
src/: __init__.py  logging_config.py
src/agent/: __init__.py
src/agentr/: __init__.py  __main__.py  anthropic_client.py  llm_client.py  message_types.py  openai_client.py
src/agentr/agent/: __init__.py  graph.py
src/agentr/agent/nodes/: __init__.py  base.py  orchestrator_node.py  research_node.py  synthesize_node.py
src/agentr/client/: __init__.py  base.py  openai.py
src/agentr/core/: __init__.py  messages.py  nodes.py  state.py
src/agentr/prompts/: __init__.py  system_prompts.py  tool_constants.py
src/agentr/tools/: __init__.py  formatting_tools.py  registry.py  types.py  web_search_tool.py
src/client/: __init__.py  llm_client.py  openai_client.py
src/config/: __init__.py  configs.py
src/exceptions/: __init__.py  exceptions.py
src/graph/: agent.py  base.py  exceptions.py  nodes.py  orchestrator.py  persistence.py  process_query.py  researcher.py  utils.py
src/graphs/: orchestrator.py  researcher.py
src/models/: states.py
src/prompt_templates/: __init__.py  orchestrator_prompt.py  researcher_prompt.py
src/tools/: __init__.py  manager.py  names.py  research_tool.py  web_search_tool.py
src/tools/base/: __init__.py  base_tool.py
src/tools/decision/: __init__.py  research_tool.py
src/tools/execution/: __init__.py  web_search_tool.py
src/tools/utils/: __init__.py
tests/: __init__.py  conftest.py  test_agentr.py  test_openai_client.py
tests/fixtures/: __init__.py  api_fixtures.py  state_fixtures.py
tests/unit/config/: test_configs.py  test_logging_config.py
tests/unit/graph/: test_agent.py  test_base_node.py  test_orchestrator.py  test_process_query.py  test_researcher.py  test_utils.py
tests/unit/tools/: test_base_tool.py  test_manager.py
tests/unit/tools/decision/: test_research_tool.py
tests/unit/tools/execution/: test_web_search_tool.py
tests/utils/: __init__.py  patches.py
