[project]
name = "agentr"
version = "0.1.0"
description = ""
authors = [
    { name = "jojo" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "tavily-python (>=0.7.17,<0.8.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langfuse (>=3.11.2,<4.0.0)",
    "langchain (>=1.2.3,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "grandalf (>=0.8,<0.9)",
    "typer (>=0.21.1,<0.22.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=24.0.0,<25.0.0)",
    "mypy (>=1.0.0,<2.0.0)",
    "ruff (>=0.5.0,<0.6.0)",
    "pre-commit (>=3.0.0,<4.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Select which rule codes to check
select = ["E", "F", "I", "B", "W", "Q", "C", "N", "UP", "YTT", "S", "RUF"]

# Ignore specific rules (removed ANN101, ANN102, TCH since they no longer exist)
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/prompt_templates/*.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = "src"
