[project]
name = "agentr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.8",
    "langfuse>=3.14.1",
    "langgraph>=1.0.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "rich>=14.3.2",
    "tavily-python>=0.7.21",
    "typer>=0.21.2",
]
